# micro-prompts

./: .gitignore  CMakeLists.txt  README.md  constants.c  documentation.md  espidf-http-rest-api.c  espidf-http-rest-api.h  espidf-llm-clients.c  install-ino.ps1  llm-clients.h
arduino/: llm-clients.cpp  llm-clients.h
espidf/: llm-clients.c
espidf/http/: http-rest-api.h
ino/: README.md  keywords.txt  library.properties
ino/examples/mjpeg-video-feed/: image_names.h  mjpeg-video-feed.ino
ino/examples/simple-chat-client/: simple-chat-client.ino
ino/src/: LLMClients.cpp  LLMClients.h
providers/: google.h  openai.h
src/: LLMClients.h  constants.c  llm-clients.c  llm-clients.h  types.h
src/common/: constants.c  llm-constants.c  llm-types.h  types.h
src/common/debug/: debug.c  debug.h
src/common/providers/: anthropic.h  google.c  google.h  grok.h  groq.h  hf.h  openai.c  openai.h
src/common/tests/: compile.sh  makefile  prep_files.py  test_google.h  test_memory.c  test_memory.h  test_openai.h  tests.c
src/common/utils/: base64.c  debug.c  utils.h
src/http/: http-rest-api.c  http-rest-api.h
src/providers/: google.h  text-promts.txt
