idf_component_register(
    SRCS 
        "./src/llm-clients.c"
        "src/common/utils/debug.c"
        "src/common/utils/base64.c"
        "./src/common/llm-constants.c"
        "./src/common/cJSON/cJSON.c"
        "./src/http/http-rest-api.c"
    INCLUDE_DIRS 
        "./src"
        "./src/http"
        "./src/common"
        "./src/common/utils"
        "./src/common/cJSON"
        "./src/common/providers"
    REQUIRES 
        esp-tls
        esp_http_client
        esp_netif
        protocol_examples_common
        nvs_flash
        esp_event
        #json
)
